# minutecat

./: Cargo.toml  README.md
.github/workflows/: build.yml  pkgbuild.yml  rust.yml  test.yml
cli/: Cargo.toml
cli/src/: app.rs  event.rs  main.rs  tab.rs
client/: Cargo.toml
gui/: Cargo.toml
gui/src/: listview.rs  local.rs  logs.rs  main.rs  mainview.rs
lib/: Cargo.toml
lib/src/: command.rs  error.rs  extra.rs  interface.rs  lib.rs  logfile.rs  logset.rs  source.rs  task.rs  trigger.rs
lib/src/source/: directory.rs  filesystem.rs  http.rs  inmemory.rs  mod.rs  source.rs
pkg/arch/minutecat-git/: PKGBUILD
