[package]
name = "minutecat-cli"
version = "0.1.0"
authors = ["Lukas Krickl <lukas@krickl.dev>"]
description = "multilog cli"
license = "MIT"
homepage = "https://github.com/unlink2/minutecat"
edition = "2018"

[[bin]]
name = "minutecat"
path = "src/main.rs"

[dependencies]
minutecat = {path = "../lib"}
clap = {version = "3.1.10", features=["derive"]}
tui = "0.15"
termion = "1.5"
chrono = "0.4.19"
tokio = { version = "1", features = ["full"] }
