[package]
name = "multilog-cli"
version = "0.1.0"
authors = ["Lukas Krickl <lukas@krickl.dev>"]
description = "multilog cli"
license = "MIT"
homepage = "https://github.com/unlink2/octoforth"
edition = "2018"

[[bin]]
name = "multilog"
path = "src/main.rs"

[dependencies]
multilog = {path = "../lib"}
clap = "3.0.0-beta.2"
