[package]
name = "minutecat-gui"
version = "0.1.0"
authors = ["Lukas Krickl <lukas@krickl.dev>"]
description = "multilog cli"
license = "MIT"
homepage = "https://github.com/unlink2/minutecat"
edition = "2018"

[[bin]]
name = "minutecat-desktop"
path = "src/main.rs"

[dependencies]
minutecat = {path = "../lib"}
clap = "3.0.0-beta.2"
fltk = "1.1.0"
