[package]
name = "multilog"
version = "0.1.0"
authors = ["Lukas Krickl <lukas@krickl.dev>"]
description = "Log-file monitor program"
license = "MIT"
homepage = "https://github.com/unlink2/octoforth"
readme = "../README.md"

[lib]
name = "multilog"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
typetag = "0.1.7"
regex = "1.5.4"
