[package]
name = "minutecat"
version = "0.1.0"
authors = ["Lukas Krickl <lukas@krickl.dev>"]
description = "Log-file monitor program"
license = "MIT"
homepage = "https://github.com/unlink2/minutecat"
readme = "../README.md"

[lib]
name = "minutecat"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
typetag = "0.1.7"
regex = "1.5.4"
serde_yaml = "0.8.17"
clap = "3.0.0-beta.2"
dirs = "3.0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
