[package]
name = "minutecat"
version = "0.1.0"
authors = ["Lukas Krickl <lukas@krickl.dev>"]
description = "Log-file monitor program"
license = "MIT"
homepage = "https://github.com/unlink2/minutecat"
readme = "../README.md"
edition = "2018"

[lib]
name = "minutecat"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
typetag = "0.1.7"
regex = "1.5.4"
serde_yaml = "0.8.17"
clap = {version = "3.1.10", features=["derive"]}
dirs = "3.0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.50"
